# readwrite-hwp-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md  overview.md
docs/guides/: README.md  deployment.md
docs/planning/: hwp-mcp-planning.md
docs/references/: README.md
examples/: basic_usage.py
src/: __init__.py  server.py
src/backends/: __init__.py  base.py  com_backend.py  factory.py  hwpx_backend.py
src/hwp/: __init__.py  constants.py  controller.py  exceptions.py
src/hwpx/: __init__.py  document.py  reader.py  writer.py
src/tools/: __init__.py  document.py  style.py  table.py  text.py
src/utils/: __init__.py  path_utils.py  validation.py
tests/: __init__.py  test_validation.py
tests/fixtures/: .gitkeep
